# perf-playground

./: Cargo.toml  README.md
console/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/src/: boot.rs  heap.rs  layout.rs  main.rs  page.rs  space.rs
linker/: Cargo.toml
linker/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
