[package]
name = "kernel"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt", branch = "dev" }
dtb-walker = "0.2.0-alpha.3"
page-table = "0.0.6"
riscv = "0.8.0"
spin = "0.9.4"
r0 = "1"
console = { path = "../console" }
