[package]
name = "kernel"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linker = { path = "../linker" }
console = { path = "../console" }
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt", branch = "dev" }
customizable-buddy = "0.0.1"
dtb-walker = "0.2.0-alpha.3"
page-table = "0.0.6"
rangemap = "1.0.3"
riscv = "0.8.0"
spin = "0.9.4"

[build-dependencies]
linker = { path = "../linker" }
